fixed alignment + image

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,7 +1,6 @@
 html{
-  background: url("/images/interior.jpg");
+  background: url("/images/interior.jpg") no-repeat center center fixed;
   background-size: 100%;
-  position: relative;
 }
 
 .nav {
@@ -41,7 +40,7 @@ h2 {
   border: 2px solid grey; 
   background: rgba(255,255,255, 0.5);
   width: 300px;
-  text-align: center;
+  vertical-align: middle;
   display: inline-block;
 }
 
